2015-06-01  Steve Ellcey  <sellcey@imgtec.com>

	* resolv/res_hconf.c (_res_hconf_reorder_addrs): Use a union to
	copy data from cur_ifr->ifr_addr and cur_ifr->ifr_netmask.

2015-05-29  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2015-05-28  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/exit-thread.h (__exit_thread): If not detached,
	set THREAD_SELF->tid to a magic value and futex-wake it.
	Pass its address to the thread_exit system call.
	* sysdeps/nacl/pthread-pids.h (__nacl_get_tid): Assert that TID's low
	bit is clear.
	* sysdeps/nacl/lowlevellock.h: New file.
	* sysdeps/nacl/lll_timedwait_tid.c: New file.

	* sysdeps/nacl/lowlevellock-futex.h (lll_futex_timed_wait):
	Add TIMEOUT to current time, don't subtract it.

2015-05-28  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18422]
	* Makefile ($(objpfx)tst-audit2): Depend on $(libdl).
	($(objpfx)tst-audit2.out): Also depend on
	$(objpfx)tst-auditmod9b.so.
	* elf/tst-audit2.c: Include <dlfcn.h>.
	(calloc_called): New.
	(calloc): Allow to be called more than once.
	(do_test): dllopen/dlclose $ORIGIN/tst-auditmod9b.so.

2015-05-28  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/ieee754/dbl-64/s_fabs.c: (__fabs): Call __builtin_fabs.
	* sysdeps/ieee754/flt-32/s_fabsf.c: (__fabsf): Likewise.

2015-05-27  Marko Myllynen  <myllynen@redhat.com>

	* stdlib/monetary.h: Fix comment.

2015-05-26  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/unix/sysv/linux/tile/sysdep.h (INLINE_SYSCALL):
	Avoid using variables in #defines that might cause shadowing.
	(INTERNAL_VSYSCALL_CALL): Likewise.

2015-05-26  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/lll_timedlock_wait.c: New file.

	* nptl/lowlevellock.c (__lll_timedlock_wait): Moved ...
	* nptl/lll_timedlock_wait.c: ... to this new file.
	* nptl/Makefile (libpthread-routines): Add it.
	* nptl/lowlevellock.c (__lll_timedwait_tid): Moved ...
	* nptl/lll_timedwait_tid.c: ... to this new file.